(lang dune 3.11)
(name vmc)
(generate_opam_files true)
(authors     "Dmitry Ponyatov <dponyatov@gmail.com>")
(maintainers "Dmitry Ponyatov <dponyatov@gmail.com>")
(license      MIT)
(homepage    "https://gitflic.ru/project/dponyatov/vmc")
(bug_reports "http://t.me/dponyatov")
(package
 (name         vmc)
 (synopsis    "Virtual Machine Compiler")
 (description "bytecode compiler prototype for native Linux")
 (depends      utop ocamlformat ocaml-lsp-server batteries ppx_inline_test)
 (tags        (bytecode script compiler interpreter))
)
